resolved warnings